src/pages/Main/styles.scss
@import "../../App.scss";

.products-schedules-wrapper {
  display: flex;

  @media (max-width: $e-vp) {
    flex-direction: column;
  }
}

.stats-card-container {
  display: flex;
  flex-wrap: wrap;

  @media (max-width: $e-vp) {
    flex-direction: column;
  }

  .stats-card {
    flex: 1;
    margin-right: 35px;

    @media (max-width: $f-vp) {
      margin-right: 0;
      &:nth-child(odd) {
        margin-right: 35px;
      }
    }

    @media (max-width: $e-vp) {
      margin-right: 0;
      &:nth-child(odd) {
        margin-right: 0;
      }
    }
  }

  .stats-card:last-child {
    margin-right: 0;
  }
}

.chevron-down {
  font-size: 14px;
  transform: rotate(90deg);
}

.dashboard-box {
  padding: 30px 40px;
  background-color: $white;
  border-radius: 20px;

  &.activities {
    margin-bottom: 40px;
  }
}

.top-products {
  margin-right: 40px;
  flex: 1;

  @media (max-width: $e-vp) {
    margin-right: 0;
    margin-bottom: 40px;
  }

  .top-products-box-head {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 25px;

    .right {
      display: flex;
      color: $secondary;
      position: relative;

      .current-duration {
        color: $secondary;
        display: flex;
        align-items: center;
        font-size: 12px;
      }

      .duration-dropdown {
        padding: 7px 8px;
        position: absolute;
        width: 100px;
        top: 20px;
        background-color: $white;
        border-radius: 10px;
        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25);

        a {
          display: block;
          text-align: center;
          font-size: 10px;
          padding: 4px 0;
          border-radius: 10px;
          margin-bottom: 4px;
          color: $black;

          &:hover {
            background-color: $bgGrey;
          }
        }
      }
    }

    p {
      display: flex;
      align-items: center;
      font-size: 12px;
    }

    @media (max-width: $b-vp) {
      flex-direction: column;
      align-items: flex-start;
      .right {
        margin-top: 10px;
      }
    }
  }

  .top-products-box-body {
    display: flex;

    @media (max-width: $f-vp) {
      flex-direction: column;
    }

    .pie-chart {
      margin-right: 45px;
      @media (max-width: $f-vp) {
        margin: 0;
        margin-bottom: 20px;
      }
    }

    .pie-stats {
      .stat {
        display: flex;
        align-items: flex-start;
        margin-bottom: 20px;

        .data-hightlight-color {
          border-radius: 50%;
          margin-right: 10px;
          height: 11px;
          width: 11px;
        }

        .prod-name {
          margin-bottom: 5px;
          font-size: 14px;
          font-family: $fontMontserrat;
          line-height: 1;
        }

        .prod-value {
          font-size: 12px;
          font-family: $fontLato;
          color: $secondary;
        }
      }
    }
  }
}

.activities-box-head {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;

  .left {
    .time-span {
      font-size: 14px;
      color: $secondary;
      display: flex;
    }
  }

  .right {
    display: flex;

    .stat {
      display: flex;
      align-items: center;
      font-size: 14px;
      font-family: $fontLato;
      color: $secondary;
      &:first-child {
        margin-right: 35px;
      }
    }

    .data-hightlight-color {
      height: 10px;
      width: 10px;
      border-radius: 50%;
      margin-right: 10px;
    }
  }

  @media (max-width: $b-vp) {
    flex-direction: column;
    .right {
      margin-top: 10px;
    }
  }
}

.x-axis {
  text-anchor: middle;
}

